--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                 </div>
             </div>
         </nav>
+        <!--eliminar nota -->
         <div class="buscador-desplegado cf">
-            <input type="text" id="input-buscador" placeholder="Busca tu curso o a un creativo" style="background: white" name="buscador">
+            <input type="text" id="input-buscador" placeholder="Busca tu curso o un creativo" style="background: white" name="buscador">
             <div class="buscador-container-derecha cf">
                 <div class="container-button-buscador left">
                     <a class="button-2 full-button type-color-3" href="buscador.html">Buscar</a>
