--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="UTF-8">
@@ -15,6 +15,7 @@
 
 <body>
     <header class="cf">
+    <div class="container-home">
         <div class="logo">
             <a href="index.html">
                 <span class="icono-redes-an-ampliado img-logo logotipo-pys" alt="Logo"></span>
@@ -25,7 +26,7 @@
                 <ul class="esconder">
                     <li class="tamano_fijo"><a href="anunciosprofes.html" class="uppercase">Encuentra tu curso</a></li>
                     <li class="tamano_fijo"><a href="anuncios.html" class="uppercase">Busca tu alumno</a></li>
-                    <li class="tamano_fijo"><a href="funciona.html" class="uppercase">¿Cómo funciona?</a></li>
+                    <li class="tamano_fijo"><a href="como_funciona.html" class="uppercase">¿Cómo funciona?</a></li>
                 </ul>
             </div>
             <div class="right">
@@ -61,9 +62,8 @@
                 </div>
             </div>
         </nav>
-        <!--eliminar nota -->
         <div class="buscador-desplegado cf">
-            <input type="text" id="input-buscador" placeholder="Busca tu curso o un creativo" style="background: white" name="buscador">
+            <input type="text" id="input-buscador" placeholder="Busca tu curso o a un creativo" style="background: white" name="buscador">
             <div class="buscador-container-derecha cf">
                 <div class="container-button-buscador left">
                     <a class="button-2 full-button type-color-3" href="buscador.html">Buscar</a>
@@ -73,9 +73,10 @@
                 </a>
             </div>
         </div>
+        </div>
     </header>
 
-    <article>
+   <article>
         <div class="fondo-img-top">
             <div class="box-top-1 left">
 
@@ -84,7 +85,7 @@
                     <p class="subtitle type-color-3 centrado">De otro creativo con clases particulares  gratuitas</p>
 
                         <div class="container-button">
-                            <button class="full-button button-2"><a class="type-color-3" href="anunciosprofes.html">encuentra tu curso</a></button>
+                            <a class="full-button button-2 type-color-3" href="anunciosprofes.html">encuentra tu curso</a>
                         </div>
                     </div>
                 </div>
@@ -95,54 +96,45 @@
                     <div class="texto-top left">
                         <h1 class="title type-color-3">enseña</h1>
                         <p class="subtitle type-color-3 centrado">A otro creativo que necesita una clase urgente y gratuita </p>
-<<<<<<< HEAD
-                        <div class="container-button">
-                            <button class="full-button button-2"><a class="type-color-3" href="anuncios.html">encuentra tu curso</a>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-=======
 
                     <div class="container-button">
-                    <button class="full-button button-2"><a class="type-color-3" href="anuncios.html">busca tu alumno</a>
-                    </button>
+                    <a class="full-button button-2 type-color-3" href="anuncios.html">busca tu alumno</a>
                     </div>
                     </div>
             </div>
->>>>>>> 796e36cf811434cec71cb544206f4fafd537242d
+
             </div>
         </article>
 
+
         <article class="article2">
             <div class="container-titulo-home">
-                <h2 class="title centrado" id="como-funciona">¿Como funciona?</h2>
+                <h2 class="title centrado" id="como-funciona">¿Cómo funciona?</h2>
             </div>
             <div class="background-4 cf">
                 <div class= "container">
                     <section class="mini-box-1">
-                        <img class="imagen-ilustraciones" src="imagenes/ilustracion-1-home.png" alt="Home">
+                        <img class="imagen-ilustraciones imagen-redondo" src="imagenes/ilustracion-1-home.jpg" alt="Home">
                         <div class="container-texto">
                             <h3 class="subtitle destacado texto centrado">¡Encuentra un curso o <br> busca a tu alumno perfecto!</h3>
                         </div>
 
                     </section>
-
-
                     <section class="mini-box-2">
-                        <img class="imagen-ilustraciones" alt="intercambia-una-comida" src="imagenes/ilustracion-2-home.png">
+                        <img class="imagen-ilustraciones imagen-redondo" alt="intercambia-una-comida" src="imagenes/ilustracion-5-home.jpg">
                         <div class="container-texto">
                             <h3 class="subtitle destacado  centrado">Intercambia una clase por una comida</h3>
                         </div>
                     </section>
 
                     <section class="mini-box-3">
-                        <img class="imagen-ilustraciones" alt="valorale" src="imagenes/ilustracion-3-home.png">
+                        <img class="imagen-ilustraciones imagen-redondo" alt="valorale" src="imagenes/ilustracion-3-home.jpg">
                         <div class="container-texto">
                             <h3 class="subtitle destacado centrado">¡Valora a tu alumno o a tu profesor!</h3>
                         </div>
-                    </section>
-
+                     </section>
+                     <div class="botton clear">
+                        <a class="full-button button-2 type-color-3 general-button" href="como_funciona.html">¿quieres saber más?</a>
                     </div>
                 </div>
             </article>
@@ -174,6 +166,7 @@
                                 <p class="terms type-color-3"><a class="type-color-3" href="normasnews.html" target="_blank">Haciendo click aquí aceptas nuestras<span><u> bases y condiciones</u></span></a></p>
                             </div>
                         </div>
+                        </section>
 
 
                         <p class="copyright">©2015 puntoyseguido.All rights reserved.</p>
