--- a/anunciosprofes.html
+++ b/anunciosprofes.html
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div class="container-button-title">
-    <a class="button-2 margin-top type-color-3 publicar-curso" href="#"><span>Publica tu curso</span></a>
+    <a class="button-2 margin-top type-color-3 publicar-curso" href="publicar_curso.html"><span>Publica tu curso</span></a>
 </div>
 </div>
 <!--filtros y ordenar de tablet y mobil-->
